--- a/style.css
+++ b/style.css
@@ -6,7 +6,14 @@ section {
     display: flex;
     width: 100vw;
     height: 100vh;
-    background-color: rgb(234, 182, 243);
+}
+
+#home {
+    display: flex;
+    flex-direction: column;
+    background-image: url(images/RIC03318.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .nav {
@@ -25,19 +32,26 @@ section {
     width: 80%;
 }
 
+.nav ul a {
+    color: rgb(253, 247, 254);
+    text-decoration: none;
+    text-shadow: 1px 1px 3px rgb(36, 33, 37);
+}
+
+.nav ul a:hover {
+    color: darkmagenta;
+    text-shadow: none;
+}
+
 .nav li {
     list-style-type: none;
     font: bold 18pt "Calibri";
-    color: rgb(253, 238, 255);
 }
 
 .home {
     display: flex;
     width: 100vw;
     height: 100vh;
-    background-image: url(images/RIC03318.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
 }
 
 .homel {
@@ -71,7 +85,7 @@ h1 {
 .whatsnew {
     width: 45%;
     height: 30%;
-    margin: 0px 80px 60px 0px;
+    margin: 0px 100px 40px 0px;
     border-radius: 25px;
     background-color: rgba(69, 50, 68, 0.288);
     color: white;
@@ -83,4 +97,33 @@ h2 {
 
 .whatsnew p {
     font: 14pt "Calibri";
+}
+
+.homebasebox {
+    align-items: flex-end;
+    width: 100vw;
+    height: 250px;
+    background-image: linear-gradient(rgba(255, 255, 255, 0), rgb(254, 236, 255));
+}
+
+.sectionhead {
+    width: 100vw;
+    height: 70px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.sectiontitle {
+    width: 250px;
+    height: 56px;
+    border-radius: 25px;
+    background-color: rgb(106, 44, 97);
+    box-shadow: 1px 1px 3px rgb(36, 33, 37);
+}
+
+#galleries {
+    width: 100vw;
+    height: 100vh;
+    background-image: linear-gradient(rgb(254, 236, 255), rgb(255, 233, 252));
 }
